docs(testing): remove fabricated content from BACKEND_UNIT_TESTS.md
Third doc in this Rock to carry invented-but-plausible content, after
INTEGRATION_TESTS.md and REST_API_PATTERNS.md (both found by Jose in #37128).
Everything below was verified against current source.

Removed a test categorization mechanism that does not exist. The doc had a "Test
Categories" section built on @Category(UnitTestBaseMarker.class) and
@Category(SlowTestMarker.class). Neither marker class exists, and there is not a
single @Category anywhere in dotCMS/ or dotcms-integration/ — no JUnit 5 @Tag and
no groups configuration in any pom either. The two commands built on it,
-Dgroups=fast and -Dexclude.groups=slow, silently do nothing. Replaced with what
is actually true: Surefire selects by name, so *Test.java is the whole contract,
and -Dtest= is the only way to narrow a run.

Removed the `unit-tests` Maven profile, which does not exist. `coverage` does and
was kept.

Replaced the invented Surefire block. The doc showed includes/excludes covering
**/*Tests.java (zero files match that pattern) and excluding integration tests
from the same module. Real config lives once in parent/pom.xml, sets no
includes/excludes at all, and integration tests are a separate module under
Failsafe.

Replaced the flagship example. ContentTypeValidatorTest, ContentTypeValidator and
ValidationResult are all fictional; the example appeared in four commands
elsewhere in the file. Now modelled on
dotCMS/src/test/java/com/dotcms/health/servlet/HealthProbeServletTest.java, with
a note that both Mockito initialization idioms in this codebase are live
(initMocks in 5 classes, MockitoJUnitRunner in 6) so readers follow the file they
are editing instead of converting it.

Corrected the CI section. It described a hand-written workflow step running
./mvnw test -pl :dotcms-core. The job is generated from .github/test-matrix.yml,
whose JVM entry is `test -Dprod -pl :dotcms-core` — the -Dprod flag was missing,
and the file to 